--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -380,28 +380,6 @@ test_groups:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   alert_stale_results_hours: 170
   num_failures_to_alert: 1
-- name: ci-knative-eventing-0.10-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.10-continuous
-  alert_options:
-    alert_mail_to_addresses: "prime-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-eventing-0.10-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.10-dot-release
-  alert_options:
-    alert_mail_to_addresses: "prime-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
-- name: ci-knative-eventing-contrib-0.10-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.10-continuous
-  alert_options:
-    alert_mail_to_addresses: "prime-engprod-sea@google.com"
-  num_failures_to_alert: 3
-- name: ci-knative-eventing-contrib-0.10-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.10-dot-release
-  alert_options:
-    alert_mail_to_addresses: "prime-engprod-sea@google.com"
-  alert_stale_results_hours: 170
-  num_failures_to_alert: 1
 - name: ci-knative-serving-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.11-continuous
   alert_options:
@@ -549,18 +527,62 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-0.13-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.13-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-contrib-0.13-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.13-continuous
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.13-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.13-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-serving-operator-0.13-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.13-continuous
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-operator-0.13-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.13-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-operator-0.13-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.13-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-0.13-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.13-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-0.14-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.14-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.14-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.14-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-serving-operator-0.14-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.14-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-0.14-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.14-continuous
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
@@ -599,6 +621,17 @@ test_groups:
   num_failures_to_alert: 1
 - name: ci-google-knative-gcp-0.13-continuous
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.13-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-google-knative-gcp-0.13-dot-release
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.13-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-google-knative-gcp-0.14-continuous
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.14-continuous
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
@@ -1185,30 +1218,6 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
-  - name: eventing-continuous
-    test_group_name: ci-knative-eventing-0.10-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "prime-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-dot-release
-    test_group_name: ci-knative-eventing-0.10-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "prime-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-contrib-continuous
-    test_group_name: ci-knative-eventing-contrib-0.10-continuous
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "prime-engprod-sea@google.com"
-    num_failures_to_alert: 3
-  - name: eventing-contrib-dot-release
-    test_group_name: ci-knative-eventing-contrib-0.10-dot-release
-    base_options: "sort-by-name="
-    alert_options:
-      alert_mail_to_addresses: "prime-engprod-sea@google.com"
-    num_failures_to_alert: 3
 - name: knative-0.11
   dashboard_tab:
   - name: serving-continuous
@@ -1377,8 +1386,20 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-0.13-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
   - name: eventing-contrib-continuous
     test_group_name: ci-knative-eventing-contrib-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-0.13-dot-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
@@ -1389,8 +1410,46 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
+  - name: serving-operator-dot-release
+    test_group_name: ci-knative-serving-operator-0.13-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
   - name: eventing-operator-continuous
     test_group_name: ci-knative-eventing-operator-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-dot-release
+    test_group_name: ci-knative-eventing-operator-0.13-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+- name: knative-0.14
+  dashboard_tab:
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-0.14-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-0.14-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: serving-operator-continuous
+    test_group_name: ci-knative-serving-operator-0.14-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-continuous
+    test_group_name: ci-knative-eventing-operator-0.14-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
@@ -1413,6 +1472,20 @@ dashboards:
   dashboard_tab:
   - name: knative-gcp-continuous
     test_group_name: ci-google-knative-gcp-0.13-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: knative-gcp-dot-release
+    test_group_name: ci-google-knative-gcp-0.13-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+- name: google-0.14
+  dashboard_tab:
+  - name: knative-gcp-continuous
+    test_group_name: ci-google-knative-gcp-0.14-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
