--- a/config/build-cluster/cluster/200-cpu-limitrange.yaml
+++ b/config/build-cluster/cluster/200-cpu-limitrange.yaml
@@ -15,12 +15,12 @@
 apiVersion: v1
 kind: LimitRange
 metadata:
-  name: mem-limit-range
+  name: cpu-limit-range
   namespace: test-pods
 spec:
   limits:
     - default:
-        memory: 8Gi
+        cpu: 4000m
       defaultRequest:
-        memory: 8Gi
+        cpu: 2000m
       type: Container
