--- a/tools/flaky-test-reporter/config/config.yaml
+++ b/tools/flaky-test-reporter/config/config.yaml
@@ -25,49 +25,49 @@ jobConfigs:
     type: postsubmit
     slackChannels:
       - name: net-istio
-        identity: CA9RHBGJX
+        identity: C012AK2FPK7
   - name: ci-knative-serving-istio-1.5-no-mesh
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-istio
-        identity: CA9RHBGJX
+        identity: C012AK2FPK7
   - name: ci-knative-serving-istio-1.4-mesh
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-istio
-        identity: CA9RHBGJX
+        identity C012AK2FPK7
   - name: ci-knative-serving-istio-1.4-no-mesh
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-istio
-        identity: CA9RHBGJX
+        identity: C012AK2FPK7
   - name: ci-knative-serving-gloo-0.17.1
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-gloo
-        identity: CA9RHBGJX
+        identity: C011X8RKZBR
   - name: ci-knative-serving-contour-latest
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-contour
-        identity: CA9RHBGJX
+        identity: C012J5TCS6Q
   - name: ci-knative-serving-kourier-stable
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-kourier
-        identity: CA9RHBGJX
+        identity: C012C0VQJAW
   - name: ci-knative-serving-ambassador-latest
     repo: serving
     type: postsubmit
     slackChannels:
       - name: net-ambassador
-        identity: CA9RHBGJX
+        identity: C011X8SPF8X
   - name: ci-knative-eventing-continuous
     repo: eventing
     type: postsubmit
