--- a/images/prow-tests-go112/Dockerfile
+++ b/images/prow-tests-go112/Dockerfile
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 FROM gcr.io/knative-tests/test-infra/prow-tests:stable
-LABEL maintainer "Chao Dai <chaodai@google.com>"
+LABEL maintainer="Chao Dai <chaodai@google.com>"
 
 # Install go at 1.12 same as how it's installed in kubekins-e2e image, reference code here:
 # https://github.com/kubernetes/test-infra/blob/1e9b5dc3de4b268aab57c9c48120aa3dcf096bc6/images/kubekins-e2e/Dockerfile#L64
