Set memory limit for janitor also so they don't really request much resource
Also by the way kick staging process to get everything updated

--- a/config/build-cluster/cluster/400-boskos-janitor.yaml
+++ b/config/build-cluster/cluster/400-boskos-janitor.yaml
@@ -45,6 +45,7 @@ spec:
         resources:
           requests:
             cpu: 200m
+            memory: 20Mi
       volumes:
       - name: service
         secret:
