More boskos related pods use less resources

--- a/config/build-cluster/cluster/400-boskos-metrics.yaml
+++ b/config/build-cluster/cluster/400-boskos-metrics.yaml
@@ -38,3 +38,7 @@ spec:
         ports:
           - containerPort: 8080
             protocol: TCP
+        resources:
+          requests:
+            cpu: 200m
+            memory: 20Mi
