--- a/config/prow-staging/cluster/400-boskos-reaper.yaml
+++ b/config/prow-staging/cluster/400-boskos-reaper.yaml
@@ -1,4 +1,4 @@
-# Copyright 2018 The Knative Authors
+# Copyright 2020 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -34,3 +34,7 @@ spec:
         image: gcr.io/k8s-prow/boskos/reaper:v20200413-9f25a5cd4
         args:
         - --resource-type=gke-project
+        resources:
+          requests:
+            cpu: 200m
+            memory: 20Mi
