--- a/config/build-cluster/cluster/400-boskos-reaper.yaml
+++ b/config/build-cluster/cluster/400-boskos-reaper.yaml
@@ -34,3 +34,7 @@ spec:
         image: gcr.io/k8s-prow/boskos/reaper:v20200406-3d3428b91
         args:
         - --resource-type=gke-project
+        resources:
+          requests:
+            cpu: 200m
+            memory: 20Mi
