Cleanup image Makefiles and add security check.
Should upload images once they've been reviewed and approved. Make it
a little harder to not do that.

Clean and simplify the Makefiles. Add convenience function for
launching a shell in your local image.

--- a/images/flaky-test-reporter/Makefile
+++ b/images/flaky-test-reporter/Makefile
@@ -13,4 +13,4 @@
 # limitations under the License.
 
 IMAGE_NAME = flaky-test-reporter
-include ../Makefile.simple-image
+include ../simple-image.mk
