--- a/config/prow-staging/cluster/400-hook.yaml
+++ b/config/prow-staging/cluster/400-hook.yaml
@@ -44,6 +44,8 @@ spec:
         - --dry-run=false
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        - --github-endpoint=http://ghproxy
+        - --github-endpoint=https://api.github.com
         ports:
           - name: http
             containerPort: 8888
