--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -22,6 +22,9 @@ presubmits:
       performance: true
       go113-branches:
       - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
       resources:
@@ -134,28 +137,14 @@ presubmits:
       - "./test/e2e-tests.sh --https"
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --https"
-    - custom-test: build-tests-go114
-      dot-dev: true
-      always_run: false
-      optional: true
-      go114: true
-      resources:
-        requests:
-          memory: 12Gi # Real request for this pod is 16 as sidecar requests 4
-        limits:
-          memory: 16Gi
-      args:
-        - "--build-tests"
-    - custom-test: integration-tests-go114
-      dot-dev: true
-      always_run: false
-      optional: true
-      go114: true
-      args:
-        - "--run-test"
-        - "./test/e2e-tests.sh"
 
   knative/client:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -181,6 +170,11 @@ presubmits:
   knative/eventing:
     - repo-settings:
       performance: true
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
       resources:
@@ -196,6 +190,12 @@ presubmits:
       dot-dev: true
 
   knative/eventing-contrib:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
       resources:
@@ -223,6 +223,12 @@ presubmits:
         - "./test/presubmit-link-check.sh"
 
   knative/pkg:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -233,6 +239,12 @@ presubmits:
       dot-dev: true
 
   knative/test-infra:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -272,6 +284,11 @@ presubmits:
   google/knative-gcp:
     - repo-settings:
       performance: true
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
     - unit-tests: true
     - integration-tests: true
@@ -285,6 +302,12 @@ presubmits:
     - go-coverage: true
 
   knative/net-certmanager:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -295,6 +318,12 @@ presubmits:
       dot-dev: true
 
   knative/net-contour:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -305,6 +334,12 @@ presubmits:
       dot-dev: true
 
   knative/net-http01:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -315,6 +350,12 @@ presubmits:
       dot-dev: true
 
   knative/net-istio:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -331,6 +372,12 @@ presubmits:
       - "./test/e2e-tests.sh --istio-version latest"
 
   knative/net-kourier:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -341,6 +388,12 @@ presubmits:
       dot-dev: true
 
   knative/serving-operator:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -356,6 +409,12 @@ presubmits:
         - "./test/e2e-upgrade-tests.sh"
 
   knative/eventing-operator:
+    - repo-settings:
+      go113-branches:
+      - "release-0.11"
+      - "release-0.12"
+      - "release-0.13"
+      - "release-0.14"
     - build-tests: true
       dot-dev: true
     - unit-tests: true
@@ -415,14 +474,12 @@ periodics:
     - continuous: true
       timeout: 100
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
         limits:
           memory: 16Gi
-    - branch-ci: true
-      release: "0.10"
-      dot-dev: true
     - branch-ci: true
       release: "0.11"
       dot-dev: true
@@ -431,6 +488,9 @@ periodics:
       dot-dev: true
     - branch-ci: true
       release: "0.13"
+      dot-dev: true
+    - branch-ci: true
+      release: "0.14"
       dot-dev: true
     - custom-job: istio-1.5-mesh
       command:
@@ -441,6 +501,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --mesh"
       dot-dev: true
+      go114: true
     - custom-job: istio-1.5-no-mesh
       command:
       - "./test/presubmit-tests.sh"
@@ -450,6 +511,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --no-mesh"
       dot-dev: true
+      go114: true
     - custom-job: istio-1.4-mesh
       command:
       - "./test/presubmit-tests.sh"
@@ -459,6 +521,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --mesh"
       dot-dev: true
+      go114: true
     - custom-job: istio-1.4-no-mesh
       command:
       - "./test/presubmit-tests.sh"
@@ -468,6 +531,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --no-mesh"
       dot-dev: true
+      go114: true
     - custom-job: gloo-0.17.1
       command:
       - "./test/presubmit-tests.sh"
@@ -477,6 +541,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --gloo-version 0.17.1"
       dot-dev: true
+      go114: true
     - custom-job: kourier-stable
       command:
       - "./test/presubmit-tests.sh"
@@ -486,6 +551,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --kourier-version stable"
       dot-dev: true
+      go114: true
     - custom-job: contour-latest
       command:
       - "./test/presubmit-tests.sh"
@@ -495,6 +561,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --contour-version latest"
       dot-dev: true
+      go114: true
     - custom-job: ambassador-latest
       command:
       - "./test/presubmit-tests.sh"
@@ -504,6 +571,7 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --ambassador-version latest"
       dot-dev: true
+      go114: true
     - custom-job: https
       command:
       - "./test/presubmit-tests.sh"
@@ -513,16 +581,10 @@ periodics:
       - "--run-test"
       - "./test/e2e-auto-tls-tests.sh --https"
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
-      resources:
-        requests:
-          memory: 12Gi
-        limits:
-          memory: 16Gi
-    - dot-release: true
-      dot-dev: true
-      release: "0.10"
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -546,23 +608,13 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      release: "0.13"
       resources:
         requests:
           memory: 12Gi
         limits:
           memory: 16Gi
-    - auto-release: true
-      dot-dev: true
-      resources:
-        requests:
-          memory: 12Gi
-        limits:
-          memory: 16Gi
-    - webhook-apicoverage: true
-      dot-dev: true
-    - custom-job: continuous-go114
-      command: "./test/e2e-tests.sh"
-      timeout: 100
+    - dot-release: true
       dot-dev: true
       go114: true
       resources:
@@ -570,10 +622,22 @@ periodics:
           memory: 12Gi
         limits:
           memory: 16Gi
+    - auto-release: true
+      dot-dev: true
+      go114: true
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - webhook-apicoverage: true
+      dot-dev: true
+      go114: true
 
   knative/client:
     - continuous: true
       dot-dev: true
+      go114: true
     - branch-ci: true
       release: "0.11"
       dot-dev: true
@@ -583,8 +647,12 @@ periodics:
     - branch-ci: true
       release: "0.13"
       dot-dev: true
+    - branch-ci: true
+      release: "0.14"
+      dot-dev: true
     - nightly: true
       dot-dev: true
+      go114: true
     - custom-job: tekton
       # This job must run after the nightly job so it uses the latest nightly.
       # Nightly jobs run between 1AM and 3AM PST.
@@ -592,6 +660,7 @@ periodics:
       cron: "0 13 * * *"
       command: "./test/tekton-tests.sh"
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
       release: "0.11"
@@ -600,12 +669,18 @@ periodics:
       release: "0.12"
     - dot-release: true
       dot-dev: true
+      release: "0.13"
+    - dot-release: true
+      dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/client-contrib:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/docs:
     - continuous: true
@@ -620,6 +695,7 @@ periodics:
           memory: 12Gi
         limits:
           memory: 16Gi
+      go114: true
     - branch-ci: true
       release: "0.11"
       dot-dev: true
@@ -634,6 +710,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -665,6 +742,7 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -672,6 +750,7 @@ periodics:
           memory: 16Gi
     - auto-release: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -681,6 +760,7 @@ periodics:
   knative/eventing-contrib:
     - continuous: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -700,6 +780,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -731,6 +812,7 @@ periodics:
           memory: 16Gi
     - dot-release: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -738,6 +820,7 @@ periodics:
           memory: 16Gi
     - auto-release: true
       dot-dev: true
+      go114: true
       resources:
         requests:
           memory: 12Gi
@@ -747,29 +830,37 @@ periodics:
   knative/pkg:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/caching:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/observability:
     - continuous: true
+      dot-dev: true
+      go114: true
 
   knative/sample-controller:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/sample-source:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/test-infra:
     - continuous: true
       dot-dev: true
+      go114: true
 
   knative/serving-operator:
     - continuous: true
       dot-dev: true
+      go114: true
     - branch-ci: true
       release: "0.11"
       dot-dev: true
@@ -784,6 +875,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
       release: "0.11"
@@ -795,12 +887,15 @@ periodics:
       release: "0.13"
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/eventing-operator:
     - continuous: true
       dot-dev: true
+      go114: true
     - branch-ci: true
       release: "0.11"
       dot-dev: true
@@ -815,6 +910,7 @@ periodics:
       dot-dev: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
       release: "0.11"
@@ -826,8 +922,10 @@ periodics:
       release: "0.13"
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   google/knative-gcp:
     - continuous: true
@@ -849,90 +947,120 @@ periodics:
       env-vars:
         - ORG_NAME=google
     - dot-release: true
+      go114: true
       env-vars:
       - ORG_NAME=google
     - auto-release: true
+      go114: true
       env-vars:
       - ORG_NAME=google
 
   knative/net-certmanager:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/net-contour:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/net-http01:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/net-istio:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative/net-kourier:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
     - auto-release: true
       dot-dev: true
+      go114: true
 
   knative-sandbox/operator:
     - continuous: true
       dot-dev: true
+      go114: true
     - nightly: true
       dot-dev: true
+      go114: true
     - dot-release: true
       dot-dev: true
+      go114: true
       env-vars:
       - ORG_NAME=knative-sandbox
     - auto-release: true
       dot-dev: true
+      go114: true
       env-vars:
       - ORG_NAME=knative-sandbox
 
   knative-sandbox/eventing-kafka:
     - continuous: true
       dot-dev: true
+      go114: true
       needs-dind: true
     - nightly: true
       dot-dev: true
+      go114: true
       needs-dind: true
     - dot-release: true
       dot-dev: true
+      go114: true
       needs-dind: true
       env-vars:
       - ORG_NAME=knative-sandbox
     - auto-release: true
       dot-dev: true
+      go114: true
       needs-dind: true
       env-vars:
       - ORG_NAME=knative-sandbox
